applications/flux-monitoring/base/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flux-state-metrics-allow-egress
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: flux-state-metrics
      app.kubernetes.io/instance: flux-state-metrics
  policyTypes:
  - Egress
  egress:
  - ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flux-state-metrics-allow-ingress
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app: flux-state-metrics
      app.kubernetes.io/instance: flux-state-metrics
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
    - protocol: TCP
      port: 8081
